# hierarchical-agents

./: .env.example  .gitignore  README.md  TESTING_GUIDE.md  multi_critic_results.json  pyproject.toml  requirements.txt  school_analysis_demo.json  test_base_agent.py  test_batch_processing.py  test_imports.py  test_system.py  verify_setup.py
.claude/: build-with-cr.md
.claude/agents/: code-reviewer.md  fix-plan-synthesizer.md  implementation-worker.md  solution-debater.md  synthesis-agent.md
.claude/commands/: commit-review.md  debate-solve.md
configs/: calibration_questions.json  development.yaml  orchestrator.yaml  performance_thresholds_example.json  question_categories.yaml  sample-data-analysis.json  scoring_rubric.json  scoring_rubric.yaml
configs/prompts/: aggregator.yaml  answer_generation.yaml  base_agent.yaml  coverage_critic.yaml  critic_agent.yaml  depth_critic.yaml  district_agent.yaml  evaluation_agent.yaml  instruction_critic.yaml  result_synthesis.yaml  school_agent.yaml  style_critic.yaml  task_coordination.yaml  teacher_agent.yaml
data/: automated_scores_sample.jsonl  human_labels.jsonl  questions.jsonl
docs/: database-analysis.md  question_dataset_guide.md  rubric_guide.md  sample-queries.sql
documentation/: implementation-plan.md  implementation-todo.md  prompt-optimization-implementation-plan.md
eval_results/: eval_20251208_201403_f683cd08_individual.json  eval_20251208_201403_f683cd08_summary.json
scripts/: analyze_runs.py  analyze_schema.py  calibrate_scoring.py  compare_runs.py  compute_alignment.py  list_questions.py  run_district_agent.py  run_eval_agent.py  run_eval_round.py  run_for_principal.py  run_for_superintendent.py  run_school_agent.py  run_teacher_agent.py  score_single_answer.py  score_with_debate.py  test_db_connection.py
src/: __init__.py
src/agents/: __init__.py  base.py  danielson.py  district.py  evaluation.py  examples.py  school.py  teacher.py  templates.py
src/critics/: __init__.py  debate_models.py  models.py  multi_critic.py  orchestrator.py  single_critic.py
src/database/: __init__.py  cache.py  connection.py  queries.py
src/eval/: __init__.py  analysis.py  calibration.py  tracking.py
src/generation/: __init__.py  answer_generator.py  hierarchical_generator.py  llm_generator.py
src/hierarchical_agents/: __init__.py  cli.py  config.py
src/models/: __init__.py  agent_outputs.py  database.py  permissions.py  test_models.py  utils.py
src/orchestration/: __init__.py  hierarchical.py
src/scoring/: __init__.py  dataset.py  loaders.py
src/utils/: __init__.py  llm.py  text_chunking.py
tests/: __init__.py  test_analysis.py  test_answer_generation.py  test_calibration.py  test_calibration_standalone.py  test_config.py  test_district_agent.py  test_evaluation_agent.py  test_multi_critic.py  test_orchestrator.py  test_school_agent.py  test_single_critic.py  test_teacher_agent.py  test_tracking.py
